--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php"
-        ]
+        ],
+        "files": ["tests/utilities/functions.php"]
     },
     "scripts": {
         "post-install-cmd": [
