--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "2.5.13"
   },
   "dependencies": {
-    "babel-core": "^6.26.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2"
   }
 }
